--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ a {
 /* header*/
 .site-header {
     background: white;
-    padding: 20px 0;
+    padding: 18px 24px;
     position: sticky;
     top: 0;
-    z-index: 50;
+    z-index: 1000;
     box-shadow: 0 2px 12px rgba(0,0,0,0.05);
 }
 .hearder-inner {
